examples/type_system/failing/41_effect_alias_now_ms_in_io_function.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E400: aliasing `now_ms` must not bypass Time effect checks in `with IO` functions.

fn h() -> Int with IO {
    let n = now_ms
    n()
}

fn main() -> Unit with IO, Time {
    h();
}
